--- a/css/movil.css
+++ b/css/movil.css
@@ -8,7 +8,9 @@
     margin: auto;
 }
 /* -----------------*/
-
+.section-imagen{
+    width: 3rem;
+}
 .section-ram{
     display: flex;
     flex-direction: column;
@@ -55,13 +57,13 @@
 }
 /*************************/
 
-.section-movil__titulo1{
+.section-movil__titulo{
     text-align: center;
-    font-size: 24px;
+    font-size: 2.4rem;
     margin-top: 1.5rem;
     font-family: 'Roboto', sans-serif;
 }
-.section-movil__imagen1{
+.section-movil__imagen2{
     width: 100%;
     margin-top: 6rem;
 }
